[package]
name = "head"
version = "0.1.0"
authors = ["Zhuo FENG <fenprace.i@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.15.0", features = ["full"] }
env_logger = "0.9.0"